--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                             <a class="pt-trigger" href="#services">Serviços</a>
                             <!--index.html#services-->
                         </li>
-                        <!-- <li>
-                            <a class="pt-trigger" href="#">Portfólio</a>
-                            index.html#portfolio
-                        </li>-->
+                        <li>
+                            <a class="pt-trigger" href="#portfolio">Portfólio</a>
+                            <!--index.html#portfolio-->
+                        </li>
                     </ul>
                     <!-- /Main menu -->
                 </div>
@@ -446,255 +446,106 @@
 
                                     </div>
                                 </div>
-                                <!-- End of Clients -->
 
-                                <!-- Testimonials 
-                                <div class="row">
-                                    <div class="col-sm-12 col-md-12">
-                                        <div class="block-title">
-                                            <h3>Depoimentos de clientes</h3>
-                                        </div>
-
-
-                                        <div class="testimonials owl-carousel block">-->
-                                <!-- Testimonial 1 
-                                            <div class="testimonial-item">-->
-                                <!-- Testimonial Author 
-                                                <div class="testimonial-credits">-->
-                                <!-- Picture 
-                                                    <div class="testimonial-picture">
-                                                        <img src="images/testimonials/testimonial_photo_1.jpg" alt="">
-                                                    </div>-->
-                                <!-- /Picture -->
-                                <!-- Testimonial author information 
-                                                    <div class="testimonial-author-info">
-                                                        <p class="testimonial-author">Maria Richardson</p>
-                                                        <p class="testimonial-firm">Lindsley's Lumber</p>
-                                                    </div>
-                                                </div>-->
-                                <!-- /Testimonial author information -->
-                                <!-- Testimonial Content 
-                                                <div class="testimonial-content">
-                                                    <div class="testimonial-text">
-                                                        <p>"Phasellus eu nunc tincidunt, ultricies elit vitae, pretium eros. Sed sed ipsum sed massa."</p>
-                                                    </div>
-                                                </div>-->
-                                <!-- /Testimonial Content -->
                             </div>
-                            <!-- End of Testimonial 1 -->
-
 
                         </div>
+                    </section>
+                    <!-- End of Services Subpage -->
+
+                    <!-- Portfolio Subpage -->
+                    <section class="pt-page" data-id="portfolio">
+                        <div class="section-inner custom-page-content">
+                            <div class="page-header color-1">
+                                <h2>Portfólio</h2>
+                            </div>
+                            <div class="page-content">
+
+                                <!-- Portfolio Content -->
+                                <div class="portfolio-content">
+
+                                    <!-- Portfolio filter -->
+                                    <ul id="portfolio_filters" class="portfolio-filters">
+                                        <li class="active">
+                                            <a class="filter btn btn-sm btn-link active" data-group="all">Tudo</a>
+                                        </li>
+                                        <li>
+                                            <a class="filter btn btn-sm btn-link" data-group="cursos">Cursos</a>
+                                        </li>
+                                        <li>
+                                            <a class="filter btn btn-sm btn-link" data-group="recomendacoes">Recomendações</a>
+                                        </li>
+                                    </ul>
+                                    <!-- End of Portfolio filter -->
+
+                                    <!-- Portfolio Grid -->
+                                    <div id="portfolio_grid" class="portfolio-grid portfolio-masonry masonry-grid-3">
+
+                                        <!-- Portfolio Item 1 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/1.jpg" class="lightbox" title="Consumindo REST APIs com Delphi">
+                                                <img src="images/portfolio/1.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Consumindo REST APIs com Delphi</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 1 -->
+
+                                        <!-- Portfolio Item 2 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/2.jpg" class="lightbox" title="Git e Github Essencial para o Desenvolvedor">
+                                                <img src="images/portfolio/2.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Git e Github</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 2 -->
+
+                                        <!-- Portfolio Item 11 -->
+                                        <figure class="item" data-groups='["recomendacoes"]'>
+                                            <a href="images/portfolio/10.jpg" class="lightbox" title="Hotel Rinkão">
+                                                <img src="images/portfolio/10.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Hotel Rinkão</h5>
+                                                    <small>Recomendações</small>
+                                                    <i class="fa fa-image"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+
+                                        <figure class="item" data-groups='["recomendacoes"]'>
+                                            <a href="images/portfolio/20.jpg" class="lightbox" title="Hortifruti Cachoeiro">
+                                                <img src="images/portfolio/20.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Hortifruti Cachoeiro</h5>
+                                                    <small>Recomendações</small>
+                                                    <i class="fa fa-image"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 11 -->
+
+                                    </div>
+                                    <!-- /Portfolio Grid -->
+
+                                </div>
+                                <!-- /Portfolio Content -->
+                            </div>
+                        </div>
+                    </section>
+                    <!-- /Portfolio Subpage -->
+
                 </div>
             </div>
-            <!-- End of Tesimonials -->
+            <!-- /Page changer wrapper -->
         </div>
-    </div>
-    </section>
-    <!-- End of Services Subpage -->
-
-
-    <!-- Portfolio Subpage -->
-    <section class="pt-page" data-id="portfolio">
-        <div class="section-inner custom-page-content">
-            <div class="page-header color-1">
-                <h2>Portfólio</h2>
-            </div>
-            <div class="page-content">
-
-                <!-- Portfolio Content -->
-                <div class="portfolio-content">
-
-                    <!-- Portfolio filter -->
-                    <ul id="portfolio_filters" class="portfolio-filters">
-                        <li class="active">
-                            <a class="filter btn btn-sm btn-link active" data-group="all">Tudo</a>
-                        </li>
-                        <li>
-                            <a class="filter btn btn-sm btn-link" data-group="media">Web Design</a>
-                        </li>
-                        <li>
-                            <a class="filter btn btn-sm btn-link" data-group="illustration">SEO</a>
-                        </li>
-                        <li>
-                            <a class="filter btn btn-sm btn-link" data-group="video">Programação</a>
-                        </li>
-                    </ul>
-                    <!-- End of Portfolio filter -->
-
-                    <!-- Portfolio Grid -->
-                    <div id="portfolio_grid" class="portfolio-grid portfolio-masonry masonry-grid-3">
-
-                        <!-- Portfolio Item 1 -->
-                        <figure class="item" data-groups='["all", "media"]'>
-                            <a href="images/portfolio/full/3.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                                <img src="images/portfolio/1.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Media</small>
-                                    <i class="fa fa-file-text-o"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 1 -->
-
-                        <!-- Portfolio Item 2 -->
-                        <figure class="item" data-groups='["all", "video"]'>
-                            <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Praesent Dolor Ex" class="lightbox mfp-iframe">
-                                <img src="images/portfolio/2.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Video</small>
-                                    <i class="fa fa-video-camera"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 2 -->
-
-                        <!-- Portfolio Item 3 -->
-                        <figure class="item" data-groups='["all","illustration"]'>
-                            <a href="images/portfolio/full/3.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                                <img src="images/portfolio/3.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Illustration</small>
-                                    <i class="fa fa-image"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 3 -->
-
-                        <!-- Portfolio Item 4 -->
-                        <figure class="item" data-groups='["all", "media"]'>
-                            <a href="images/portfolio/full/4.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                                <img src="images/portfolio/4.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Media</small>
-                                    <i class="fa fa-file-text-o"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 4 -->
-
-                        <!-- Portfolio Item 5 -->
-                        <figure class="item" data-groups='["all", "illustration"]'>
-                            <a href="images/portfolio/full/5.jpg" class="lightbox" title="Aliquam Condimentum Magna Rhoncus">
-                                <img src="images/portfolio/5.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Illustration</small>
-                                    <i class="fa fa-image"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 5 -->
-
-                        <!-- Portfolio Item 6 -->
-                        <figure class="item" data-groups='["all", "media"]'>
-                            <a href="images/portfolio/full/6.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                                <img src="images/portfolio/6.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Media</small>
-                                    <i class="fa fa-file-text-o"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 6 -->
-
-                        <!-- Portfolio Item 7 -->
-                        <figure class="item" data-groups='["all", "video"]'>
-                            <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Nulla Facilisi" class="lightbox mfp-iframe">
-                                <img src="images/portfolio/7.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Video</small>
-                                    <i class="fa fa-video-camera"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 7 -->
-
-                        <!-- Portfolio Item 8 -->
-                        <figure class="item" data-groups='["all",  "media"]'>
-                            <a href="images/portfolio/full/1.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                                <img src="images/portfolio/8.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Media</small>
-                                    <i class="fa fa-file-text-o"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 8 -->
-
-                        <!-- Portfolio Item 9 -->
-                        <figure class="item" data-groups='["all","illustration"]'>
-                            <a href="images/portfolio/full/9.jpg" class="lightbox" title="Mauris Neque Dolor">
-                                <img src="images/portfolio/9.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Illustration</small>
-                                    <i class="fa fa-image"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 9 -->
-
-                        <!-- Portfolio Item 10 -->
-                        <figure class="item" data-groups='["all", "video"]'>
-                            <a href="https://player.vimeo.com/video/97102654?autoplay=1" title="Donec Lectus Arcu" class="lightbox mfp-iframe">
-                                <img src="images/portfolio/10.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Video</small>
-                                    <i class="fa fa-video-camera"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 10 -->
-
-                        <!-- Portfolio Item 11 -->
-                        <figure class="item" data-groups='["all","illustration"]'>
-                            <a href="images/portfolio/full/11.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                                <img src="images/portfolio/11.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Illustration</small>
-                                    <i class="fa fa-image"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 11 -->
-
-                        <!-- Portfolio Item 12 -->
-                        <figure class="item" data-groups='["all","media"]'>
-                            <a href="images/portfolio/full/1.jpg" class="lightbox" title="Duis Eu Eros Viverra">
-                                <img src="images/portfolio/12.jpg" alt="">
-                                <div>
-                                    <h5 class="name">Project Name</h5>
-                                    <small>Media</small>
-                                    <i class="fa fa-file-text-o"></i>
-                                </div>
-                            </a>
-                        </figure>
-                        <!-- /Portfolio Item 12 -->
-                    </div>
-                    <!-- /Portfolio Grid -->
-
-                </div>
-                <!-- /Portfolio Content -->
-            </div>
-        </div>
-    </section>
-    <!-- /Portfolio Subpage -->
-
-    </div>
-    </div>
-    <!-- /Page changer wrapper -->
-    </div>
-    <!-- /Main Content -->
+        <!-- /Main Content -->
     </div>
     <footer>
         <!--<div class="copyrights">&copy; Geek University</div>-->
